test/resources/execution/failing/Array1.grading.amy
Object TestA1
val t: Int(32) = new Int(32)[10];
t[10]

end TestA1